# kaggle-whales

./: .gitignore  .python-version  download.sh  kaggle.json.sample  pyproject.toml
fyx/: loggers.py  training.py  utils.py
fyx/callbacks/: callback.py  confusion_matrix.py  cyclic_lr.py  dump.py  histogram.py  learning_curve.py  lr_on_plateau.py  lr_range_test.py  lr_schedule.py  meter.py  model_checkpoint.py  prediction_grid.py  report.py  roc_auc.py  tensorboard_monitor.py  weight_grid.py
whales/: evaluate.py  fit.py  kernel.py  optimize_nms.py  prepare.py
