[tool.poetry]
name = "kaggle-whales"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
kaggle = "^1.5.12"
torch = "^1.11.0"
pandas = "^1.4.1"
numpy = "^1.22.3"
opencv-python = "^4.5.5"
tensorboard = "^2.8.0"
tabulate = "^0.8.9"
albumentations = "^1.1.0"
fire = "^0.4.0"
matplotlib = "^3.5.1"
timm = "^0.5.4"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
